// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render an empty form 1`] = `
<div
  class="ant-spin-nested-loading"
>
  <div
    class="ant-spin-container"
  >
    <form
      autocomplete="off"
      class="ant-form ant-form-horizontal GoalForm"
      id="goal"
    >
      <div
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-4"
        >
          <label
            class="ant-form-item-required"
            for="goal_title"
            title="Title"
          >
            Title
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-16"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <input
                class="ant-input"
                id="goal_title"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-4"
        >
          <label
            class=""
            for="goal_description"
            title="Description"
          >
            Description
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-16"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <textarea
                class="ant-input"
                id="goal_description"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-4"
        >
          <label
            class=""
            for="goal_period"
            title="Period"
          >
            Period
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-16"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-picker ant-picker-range"
              >
                <div
                  class="ant-picker-input ant-picker-input-active"
                >
                  <input
                    placeholder="Start date"
                    readonly=""
                    size="12"
                    value=""
                  />
                </div>
                <div
                  class="ant-picker-range-separator"
                >
                  <span
                    aria-label="to"
                    class="ant-picker-separator"
                  />
                </div>
                <div
                  class="ant-picker-input"
                >
                  <input
                    placeholder="End date"
                    readonly=""
                    size="12"
                    value=""
                  />
                </div>
                <div
                  class="ant-picker-active-bar"
                  style="left: 0px; width: 0px; position: absolute;"
                />
                <span
                  class="ant-picker-suffix"
                >
                  <span
                    aria-label="calendar"
                    class="anticon anticon-calendar"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="calendar"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-4"
        >
          <label
            class=""
            for="goal_type"
            title="Type"
          >
            Type
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-16"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-select ant-select-single ant-select-show-arrow"
                style="width: 120px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="goal_type_list_0"
                      aria-autocomplete="list"
                      aria-controls="goal_type_list"
                      aria-haspopup="listbox"
                      aria-owns="goal_type_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="goal_type"
                      readonly=""
                      role="combobox"
                      style="opacity: 0;"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-placeholder"
                  />
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-16 ant-col-md-offset-4"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <button
                class="ant-btn u-margin-bottom-sm ant-btn-primary ant-btn-block"
                data-testid="goal-submit"
                type="submit"
              >
                <span>
                  CREATE
                </span>
              </button>
              <button
                class="ant-btn ant-btn-block"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
    <div
      class="ScrollButton"
    >
      <button
        class="ant-btn u-margin-bottom-sm ant-btn-circle ant-btn-icon-only"
        type="button"
      >
        <span
          aria-label="up"
          class="anticon anticon-up"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </span>
      </button>
      <button
        class="ant-btn ant-btn-circle ant-btn-icon-only"
        type="button"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`should render form with data - checklist type 1`] = `
<div
  class="ant-spin-nested-loading"
>
  <div
    class="ant-spin-container"
  >
    <form
      autocomplete="off"
      class="ant-form ant-form-horizontal GoalForm"
      id="goal"
    >
      <div
        class="ant-row ant-form-item ant-form-item-has-success"
      >
        <div
          class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-4"
        >
          <label
            class="ant-form-item-required"
            for="goal_title"
            title="Title"
          >
            Title
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-16"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <input
                class="ant-input"
                id="goal_title"
                type="text"
                value="title"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item ant-form-item-has-success"
      >
        <div
          class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-4"
        >
          <label
            class=""
            for="goal_description"
            title="Description"
          >
            Description
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-16"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <textarea
                class="ant-input"
                id="goal_description"
              >
                description
              </textarea>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item ant-form-item-has-success"
      >
        <div
          class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-4"
        >
          <label
            class=""
            for="goal_period"
            title="Period"
          >
            Period
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-16"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-picker ant-picker-range"
              >
                <div
                  class="ant-picker-input ant-picker-input-active"
                >
                  <input
                    placeholder="Start date"
                    readonly=""
                    size="12"
                    value="2020-04-15"
                  />
                </div>
                <div
                  class="ant-picker-range-separator"
                >
                  <span
                    aria-label="to"
                    class="ant-picker-separator"
                  />
                </div>
                <div
                  class="ant-picker-input"
                >
                  <input
                    placeholder="End date"
                    readonly=""
                    size="12"
                    value="2020-04-30"
                  />
                </div>
                <div
                  class="ant-picker-active-bar"
                  style="left: 0px; width: 0px; position: absolute;"
                />
                <span
                  class="ant-picker-suffix"
                >
                  <span
                    aria-label="calendar"
                    class="anticon anticon-calendar"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="calendar"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="ant-picker-clear"
                >
                  <span
                    aria-label="close-circle"
                    class="anticon anticon-close-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="close-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item-extra"
          >
            Target: 3 / day
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item ant-form-item-has-success"
      >
        <div
          class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-4"
        >
          <label
            class=""
            for="goal_type"
            title="Type"
          >
            Type
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-16"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-select ant-select-single ant-select-show-arrow"
                style="width: 120px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="goal_type_list_0"
                      aria-autocomplete="list"
                      aria-controls="goal_type_list"
                      aria-haspopup="listbox"
                      aria-owns="goal_type_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="goal_type"
                      readonly=""
                      role="combobox"
                      style="opacity: 0;"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                  >
                    Checklist
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
        data-testid="checklist-item"
      >
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-16 ant-col-md-offset-4"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="u-right"
              >
                <button
                  class="ant-btn"
                  type="button"
                >
                  <span>
                    Show completed items
                  </span>
                </button>
              </div>
              <div
                class="ant-row ant-row-space-between"
              >
                <div
                  class="ant-col ant-col-22"
                >
                  <label
                    class="GoalForm__checkbox ant-checkbox-wrapper"
                  >
                    <span
                      class="ant-checkbox"
                    >
                      <input
                        class="ant-checkbox-input"
                        type="checkbox"
                        value="1"
                      />
                      <span
                        class="ant-checkbox-inner"
                      />
                    </span>
                    <span>
                      a
                    </span>
                  </label>
                </div>
                <div
                  class="ant-col ant-col-1 u-right"
                >
                  <span
                    aria-label="edit"
                    class="anticon anticon-edit u-hover--primary"
                    role="img"
                    tabindex="-1"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="edit"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="ant-col ant-col-1 u-right"
                >
                  <span
                    aria-label="delete"
                    class="anticon anticon-delete u-hover--error"
                    role="img"
                    tabindex="-1"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="delete"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="ant-row ant-row-space-between"
              >
                <div
                  class="ant-col ant-col-22"
                >
                  <label
                    class="GoalForm__checkbox ant-checkbox-wrapper"
                  >
                    <span
                      class="ant-checkbox"
                    >
                      <input
                        class="ant-checkbox-input"
                        type="checkbox"
                        value="2"
                      />
                      <span
                        class="ant-checkbox-inner"
                      />
                    </span>
                    <span>
                      b
                    </span>
                  </label>
                </div>
                <div
                  class="ant-col ant-col-1 u-right"
                >
                  <span
                    aria-label="edit"
                    class="anticon anticon-edit u-hover--primary"
                    role="img"
                    tabindex="-1"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="edit"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="ant-col ant-col-1 u-right"
                >
                  <span
                    aria-label="delete"
                    class="anticon anticon-delete u-hover--error"
                    role="img"
                    tabindex="-1"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="delete"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="ant-row ant-row-space-between"
              >
                <div
                  class="ant-col ant-col-22"
                >
                  <label
                    class="GoalForm__checkbox ant-checkbox-wrapper"
                  >
                    <span
                      class="ant-checkbox"
                    >
                      <input
                        class="ant-checkbox-input"
                        type="checkbox"
                        value="3"
                      />
                      <span
                        class="ant-checkbox-inner"
                      />
                    </span>
                    <span>
                      c
                    </span>
                  </label>
                </div>
                <div
                  class="ant-col ant-col-1 u-right"
                >
                  <span
                    aria-label="edit"
                    class="anticon anticon-edit u-hover--primary"
                    role="img"
                    tabindex="-1"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="edit"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="ant-col ant-col-1 u-right"
                >
                  <span
                    aria-label="delete"
                    class="anticon anticon-delete u-hover--error"
                    role="img"
                    tabindex="-1"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="delete"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item GoalForm__add-item-input"
      >
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-16 ant-col-md-offset-4"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <input
                class="ant-input"
                id="goal_checklistItem"
                placeholder="Add an item"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-16 ant-col-md-offset-4"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <button
                class="ant-btn"
                type="button"
              >
                <span>
                  Add Item
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-16 ant-col-md-offset-4"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <button
                class="ant-btn u-margin-bottom-sm ant-btn-primary ant-btn-block"
                data-testid="goal-submit"
                type="submit"
              >
                <span>
                  SAVE
                </span>
              </button>
              <button
                class="ant-btn u-margin-bottom-sm ant-btn-block ant-btn-dangerous"
                data-testid="goal-delete"
                type="button"
              >
                <span>
                  DELETE
                </span>
              </button>
              <button
                class="ant-btn ant-btn-block"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
    <div
      class="ScrollButton"
    >
      <button
        class="ant-btn u-margin-bottom-sm ant-btn-circle ant-btn-icon-only"
        type="button"
      >
        <span
          aria-label="up"
          class="anticon anticon-up"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </span>
      </button>
      <button
        class="ant-btn ant-btn-circle ant-btn-icon-only"
        type="button"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`should render form with data - number type 1`] = `
<div
  class="ant-spin-nested-loading"
>
  <div
    class="ant-spin-container"
  >
    <form
      autocomplete="off"
      class="ant-form ant-form-horizontal GoalForm"
      id="goal"
    >
      <div
        class="ant-row ant-form-item ant-form-item-has-success"
      >
        <div
          class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-4"
        >
          <label
            class="ant-form-item-required"
            for="goal_title"
            title="Title"
          >
            Title
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-16"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <input
                class="ant-input"
                id="goal_title"
                type="text"
                value="title"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item ant-form-item-has-success"
      >
        <div
          class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-4"
        >
          <label
            class=""
            for="goal_description"
            title="Description"
          >
            Description
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-16"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <textarea
                class="ant-input"
                id="goal_description"
              >
                description
              </textarea>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item ant-form-item-has-success"
      >
        <div
          class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-4"
        >
          <label
            class=""
            for="goal_period"
            title="Period"
          >
            Period
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-16"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-picker ant-picker-range"
              >
                <div
                  class="ant-picker-input ant-picker-input-active"
                >
                  <input
                    placeholder="Start date"
                    readonly=""
                    size="12"
                    value="2020-04-15"
                  />
                </div>
                <div
                  class="ant-picker-range-separator"
                >
                  <span
                    aria-label="to"
                    class="ant-picker-separator"
                  />
                </div>
                <div
                  class="ant-picker-input"
                >
                  <input
                    placeholder="End date"
                    readonly=""
                    size="12"
                    value="2020-04-30"
                  />
                </div>
                <div
                  class="ant-picker-active-bar"
                  style="left: 0px; width: 0px; position: absolute;"
                />
                <span
                  class="ant-picker-suffix"
                >
                  <span
                    aria-label="calendar"
                    class="anticon anticon-calendar"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="calendar"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="ant-picker-clear"
                >
                  <span
                    aria-label="close-circle"
                    class="anticon anticon-close-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="close-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item-extra"
          >
            Target: 100 / day
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item ant-form-item-has-success"
      >
        <div
          class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-4"
        >
          <label
            class=""
            for="goal_type"
            title="Type"
          >
            Type
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-16"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-select ant-select-single ant-select-show-arrow"
                style="width: 120px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="goal_type_list_0"
                      aria-autocomplete="list"
                      aria-controls="goal_type_list"
                      aria-haspopup="listbox"
                      aria-owns="goal_type_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="goal_type"
                      readonly=""
                      role="combobox"
                      style="opacity: 0;"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                  >
                    Number
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-4"
        >
          <label
            class=""
            for="goal_amount"
            title="Amount"
          >
            Amount
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-16"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-input-number"
              >
                <div
                  class="ant-input-number-handler-wrap"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="ant-input-number-handler ant-input-number-handler-up "
                    role="button"
                    unselectable="unselectable"
                  >
                    <span
                      aria-label="up"
                      class="anticon anticon-up ant-input-number-handler-up-inner"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="up"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    aria-disabled="false"
                    aria-label="Decrease Value"
                    class="ant-input-number-handler ant-input-number-handler-down "
                    role="button"
                    unselectable="unselectable"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-input-number-handler-down-inner"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="ant-input-number-input-wrap"
                >
                  <input
                    aria-valuemin="0"
                    aria-valuenow="100"
                    autocomplete="off"
                    class="ant-input-number-input"
                    id="goal_amount"
                    min="0"
                    role="spinbutton"
                    step="1"
                    value="100"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-form-item-label ant-col-sm-24 ant-col-md-4"
        >
          <label
            class=""
            for="goal_progress"
            title="Progress"
          >
            Progress
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-16"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-input-number"
              >
                <div
                  class="ant-input-number-handler-wrap"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="ant-input-number-handler ant-input-number-handler-up "
                    role="button"
                    unselectable="unselectable"
                  >
                    <span
                      aria-label="up"
                      class="anticon anticon-up ant-input-number-handler-up-inner"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="up"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    aria-disabled="true"
                    aria-label="Decrease Value"
                    class="ant-input-number-handler ant-input-number-handler-down ant-input-number-handler-down-disabled"
                    role="button"
                    unselectable="unselectable"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-input-number-handler-down-inner"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="ant-input-number-input-wrap"
                >
                  <input
                    aria-valuemin="0"
                    aria-valuenow="0"
                    autocomplete="off"
                    class="ant-input-number-input"
                    id="goal_progress"
                    min="0"
                    role="spinbutton"
                    step="1"
                    value="0"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-16 ant-col-md-offset-4"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <button
                class="ant-btn u-margin-bottom-sm ant-btn-primary ant-btn-block"
                data-testid="goal-submit"
                type="submit"
              >
                <span>
                  SAVE
                </span>
              </button>
              <button
                class="ant-btn u-margin-bottom-sm ant-btn-block ant-btn-dangerous"
                data-testid="goal-delete"
                type="button"
              >
                <span>
                  DELETE
                </span>
              </button>
              <button
                class="ant-btn ant-btn-block"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
    <div
      class="ScrollButton"
    >
      <button
        class="ant-btn u-margin-bottom-sm ant-btn-circle ant-btn-icon-only"
        type="button"
      >
        <span
          aria-label="up"
          class="anticon anticon-up"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </span>
      </button>
      <button
        class="ant-btn ant-btn-circle ant-btn-icon-only"
        type="button"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;
